[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/playerTankCanon.png" type="Texture" id=1]
[ext_resource path="res://entities/EnemyTurret.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/enemyBase.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24.5, 26.5 )

[sub_resource type="Animation" id=2]
resource_name = "dance"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("canon/TankCanon:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.46875, 0.46875 ), Vector2( 0.569, 0.569 ), Vector2( 0.46875, 0.46875 ) ]
}

[node name="Turret" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="EnemyBase" type="Sprite" parent="."]
scale = Vector2( 0.541667, 0.541667 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -0.5 )
shape = SubResource( 1 )

[node name="canon" type="Node2D" parent="."]

[node name="TankCanon" type="Sprite" parent="canon"]
position = Vector2( 10, 0 )
scale = Vector2( 0.46875, 0.46875 )
texture = ExtResource( 1 )

[node name="shootPoint" type="Node2D" parent="canon"]
position = Vector2( 71, 0 )

[node name="shootinSmoke" type="CPUParticles2D" parent="canon"]
position = Vector2( 51, 0 )
emitting = false
lifetime = 0.2
one_shot = true
explosiveness = 0.5
spread = 70.0
initial_velocity = 200.0
scale_amount = 5.0
color = Color( 0.447059, 0, 0, 1 )

[node name="DanceAnimation" type="AnimationPlayer" parent="."]
anims/dance = SubResource( 2 )
